--- a/css/index.css
+++ b/css/index.css
@@ -387,55 +387,75 @@ header {
   height: 100px;
   margin-bottom: 0;
 }
-
+/* ESTILO PARA TABLET */
 @media only screen and (min-width: 788px) and (max-width: 979px) {
   .header {
     display: flex;
     flex-direction: column;
-    align-content: center;
+    justify-content: center;
+    text-transform: uppercase;
   }
 
-  .produto-item {
-    /* max-width: 300px; */
-    flex: 1 1 100px;
-    margin: 10px;
+  .menu-nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+  }
+
+  .menu-nav ul li {
+    flex: 1 1 140px;
+    display: block;
+    border: 4px solid #000000;
+    padding: 10px 0;
+    text-align: center;
+    transition: all 0.3s;
+  }
+  .menu-nav ul li:hover {
+    border-color: #fff;
+  }
+  .menu-nav ul li a:hover {
+    color: #fff;
   }
 }
-
+/* ESTILO PARA SMARTPHONE */
 @media only screen and (max-width: 787px) {
-  .wrapper {
-    max-width: 300px;
+  .header {
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
-  }
-  .container-produtos {
-    display: flex;
-    flex-direction: column;
-  }
-  .produto-item {
-    margin: 10px;
-  }
-
-  .container-portifolio {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    padding: 30px calc((100% - 300px) / 2);
-  }
-
-  .portifolio-item img {
-    flex: 1 1 280px;
-  }
-
-  .portifolio h2 {
-    text-align: center;
-    margin: 40px auto;
-    color: #fec63e;
+    justify-content: center;
     text-transform: uppercase;
+  }
+
+  .menu-nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+
+  .menu-nav ul li {
+    flex: 1 1 140px;
+    display: block;
+    border: 4px solid #000000;
+    padding: 10px 0;
+    text-align: center;
+    transition: all 0.3s;
+  }
+  .menu-nav ul li:hover {
+    border-color: #fff;
+  }
+  .menu-nav ul li a:hover {
+    color: #fff;
+  }
+  .container-introducao h1 {
+    font-size: 2.5em;
+  }
+  .citacao p {
     font-size: 1em;
-    font-weight: 700;
-    line-height: 20px;
-    letter-spacing: 0.1em;
+  }
+  .produto-img img {
+    margin: 0 auto;
   }
 }
